--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container head-info">
-        <img src="/glen.png" alt="Glen Whillier" class="glenImg text-center">
+        <img src="./glen.png" alt="Glen Whillier" class="glenImg text-center">
         <h1 class="titleText text-center">Glen Whillier</h1>
     
         <div class="row text-center">
@@ -46,7 +46,7 @@
         <p>I would expect to learn about programming and networking things, how technology impacts different areas of the world and maybe some of the foundation blocks that could lead to making real change in the world tomorrow.</p>
     
         <h2 class="mt-5">Chosen Job - Senior Security Consultant - Penetration Tester</h2>
-        <img src="/job.png" class="jobImg mb-5" alt="Senior Security Consultant - Penetration Tester">
+        <img src="./job.png" class="jobImg mb-5" alt="Senior Security Consultant - Penetration Tester">
         https://www.seek.com.au/job/51023416?type=standard#searchRequestToken=3bf50a80-d4e9-4193-baaa-a3b9e79023bc
         <h2 class="mt-2">Description of Role</h2>
         <p>The above job advertisement is for the position of Senior Security Consultant. The company are looking for an IT professional to become part of their team with experience in a number of different areas. I particularly like this role because it still has you doing a lot of the hands-on work of doing penetration testing and security assessments etc. </p>
@@ -61,7 +61,7 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="card">
-                    <img class="card-img-top" src="/enfj.png" alt="Personality type ENFJ">
+                    <img class="card-img-top" src="./enfj.png" alt="Personality type ENFJ">
                     <div class="card-body">
                       <h5 class="card-title">Myers Briggs - ENFJ-T Personality Type</h5>
                     </div><!-- /card-body-->
@@ -69,7 +69,7 @@
             </div><!-- /.col-lg-6 -->
             <div class="col-lg-6">
                 <div class="card">
-                    <img class="card-img-top" src="/visual2.png" alt="Visual Learner">
+                    <img class="card-img-top" src="./visual2.png" alt="Visual Learner">
                     <div class="card-body">
                       <h5 class="card-title">HTS Learning Style Assessment – Visual Learner</h5>
                     </div><!-- /card-body-->
